more styling; split js, html, and css into separate files

--- a/index.html
+++ b/index.html
@@ -1,64 +1,8 @@
 <html>
     <head>
-        <style>
-
-            @font-face {
-                font-family: "Franklin Gothic Condensed Web";
-                font-style: normal;
-                font-weight: 800;
-                src: url("franklingothic-condensed-webfont.woff2");
-            }
-            #badge {
-                margin-top: 1rem;
-                margin-bottom: 5rem;
-                margin-left: 5rem;
-            }
-            #container {
-                margin-left: auto;
-                margin-right: auto;
-                max-width: 61.25rem;
-            }
-            #title {
-                margin-left: 5rem;
-                margin-top: 10rem;
-            }
-            #title h1 {
-                font-family: "Franklin Gothic Condensed Web";
-                font-size: 2.5rem;
-            }
-            body {
-                font-family: "Roboto Condensed";
-                font-size: 1.5rem;
-                line-height: 1.55;
-                color: rgb(44, 43, 44);
-            }
-            .hidden {
-                display: none;
-            }
-            .recommendation {
-                margin-left: 5rem;
-            }
-            .recommendation h2 {
-                font-family: "Franklin Gothic Condensed Web";
-                font-size: 2rem;
-                line-height: 1.55;
-            }
-            .compliant span.symbol {
-                color: #00D682;
-                font-size: 2.5rem;
-                line-height: 1.55;
-                margin-left: -5rem;
-                position: absolute;
-            }
-            .noncompliant span.symbol {
-                color: red;
-                font-size: 2.5rem;
-                line-height: 1.55;
-                margin-left: -5rem;
-                position: absolute;
-            }
-        </style>
+        <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700">
+        <script src="index.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -246,66 +190,11 @@
                     </p>
                 </div>
             </div>
+
+            <div id="footer">
+            </div>
+
         </div>
-
-        <script>
-            const getQueryVariable = (variable) => {
-                const query = window.location.search.substring(1);
-                const pairs = query.split("&");
-                for (const pair of pairs) {
-                    const [key, value] = pair.split("=")
-                    if (key === variable) {
-                        return value;
-                    }
-                }
-                return "";
-            }
-
-            const getBadgeColor = (compliance) => {
-                const colors = ["red","red","orange","orange","yellow", "green"];
-                const count = compliance.filter((elem) => {return elem === "1"}).length;
-                return colors[count];
-            };
-
-            const getBadgeSymbols = (elem) => {
-                const symbol_compliant = "%E2%97%8F";
-                const symbol_noncompliant = "%E2%97%8B";
-                if (elem === "1") {
-                    return symbol_compliant;
-                }
-                return symbol_noncompliant;
-            };
-
-            const setBadge = (compliance) => {
-                const state = compliance.map(getBadgeSymbols).join("%20%20");
-                const color = getBadgeColor(compliance);
-                const src = "https:\/\/img.shields.io\/badge\/fair--software.eu-" + state + "-" + color;
-                document.getElementById("badge").getElementsByTagName("img")[0].src = src;
-            }
-
-            const setVisibility = (compliance) => {
-                const recommendations = ["repository", "license", "registry", "citation", "checklist"];
-                
-                for (const [i, recommendation] of recommendations.entries()) {
-                    if (compliance[i] === "1") {
-                        document.getElementById(recommendation)
-                                .getElementsByClassName("compliant")[0].classList.remove("hidden")
-                        document.getElementById(recommendation)
-                                .getElementsByClassName("noncompliant")[0].classList.add("hidden")
-                    } else {
-                        document.getElementById(recommendation)
-                                .getElementsByClassName("compliant")[0].classList.add("hidden")
-                        document.getElementById(recommendation)
-                                .getElementsByClassName("noncompliant")[0].classList.remove("hidden")
-                    }
-                }
-            }
-
-            const compliance = (getQueryVariable("compliance") + "00000").split("").slice(0, 5);
-            setBadge(compliance)
-            setVisibility(compliance)
-
-        </script>
 
     </body>
 </html>
