--- a/index.html
+++ b/index.html
@@ -27,17 +27,13 @@
                 <div class="noncompliant">
                     <span class="symbol">&#x2612;</span>
                     <h2>Use a publicly accessible repository with version control</h2>
-                    <p>
-                    Here's what to do about it.
-                    </p>
+                    <h3>Why is this important</h3>
                     <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in enim lobortis diam vehicula ultricies. Phasellus ornare purus nec dolor dapibus, ut eleifend erat aliquet. Duis facilisis dolor non erat semper pellentesque. Sed gravida non libero vitae tincidunt. In consequat sed ex at interdum. Proin mattis eu felis sed euismod. Nunc lacinia posuere mattis.
                     </p>
+                    <h3>Help me choose</h3>
                     <p>
                     Aenean quam est, egestas in sagittis in, hendrerit vel justo. Sed metus libero, auctor tincidunt metus eget, suscipit dignissim libero. Aenean non vehicula ante. Duis varius dictum ante vel feugiat. Donec non hendrerit orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus justo a odio vestibulum, sit amet fringilla orci pharetra.
-                    </p>
-                    <p>
-                    Vestibulum posuere a ex vitae egestas. Nulla ac risus vehicula, pulvinar eros non, viverra nunc. Suspendisse sit amet ex lectus. Praesent vulputate elit vitae tincidunt condimentum. Integer at felis eget massa lacinia maximus vitae eu nulla. In in ex et odio feugiat convallis eu sit amet tortor. Ut et maximus libero. 
                     </p>
                 </div>
             </div>
@@ -53,17 +49,13 @@
                 <div class="noncompliant">
                     <span class="symbol">&#x2612;</span>
                     <h2>Add a license</h2>
-                    <p>
-                    Here's what to do about it.
-                    </p>
+                    <h3>Why is this important</h3>
                     <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in enim lobortis diam vehicula ultricies. Phasellus ornare purus nec dolor dapibus, ut eleifend erat aliquet. Duis facilisis dolor non erat semper pellentesque. Sed gravida non libero vitae tincidunt. In consequat sed ex at interdum. Proin mattis eu felis sed euismod. Nunc lacinia posuere mattis.
                     </p>
+                    <h3>Help me choose</h3>
                     <p>
                     Aenean quam est, egestas in sagittis in, hendrerit vel justo. Sed metus libero, auctor tincidunt metus eget, suscipit dignissim libero. Aenean non vehicula ante. Duis varius dictum ante vel feugiat. Donec non hendrerit orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus justo a odio vestibulum, sit amet fringilla orci pharetra.
-                    </p>
-                    <p>
-                    Vestibulum posuere a ex vitae egestas. Nulla ac risus vehicula, pulvinar eros non, viverra nunc. Suspendisse sit amet ex lectus. Praesent vulputate elit vitae tincidunt condimentum. Integer at felis eget massa lacinia maximus vitae eu nulla. In in ex et odio feugiat convallis eu sit amet tortor. Ut et maximus libero. 
                     </p>
                 </div>
             </div>
@@ -79,17 +71,13 @@
                 <div class="noncompliant">
                     <span class="symbol">&#x2612;</span>
                     <h2>Register your code in a community registry</h2>
-                    <p>
-                    Here's what to do about it.
-                    </p>
+                    <h3>Why is this important</h3>
                     <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in enim lobortis diam vehicula ultricies. Phasellus ornare purus nec dolor dapibus, ut eleifend erat aliquet. Duis facilisis dolor non erat semper pellentesque. Sed gravida non libero vitae tincidunt. In consequat sed ex at interdum. Proin mattis eu felis sed euismod. Nunc lacinia posuere mattis.
                     </p>
+                    <h3>Help me choose</h3>
                     <p>
                     Aenean quam est, egestas in sagittis in, hendrerit vel justo. Sed metus libero, auctor tincidunt metus eget, suscipit dignissim libero. Aenean non vehicula ante. Duis varius dictum ante vel feugiat. Donec non hendrerit orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus justo a odio vestibulum, sit amet fringilla orci pharetra.
-                    </p>
-                    <p>
-                    Vestibulum posuere a ex vitae egestas. Nulla ac risus vehicula, pulvinar eros non, viverra nunc. Suspendisse sit amet ex lectus. Praesent vulputate elit vitae tincidunt condimentum. Integer at felis eget massa lacinia maximus vitae eu nulla. In in ex et odio feugiat convallis eu sit amet tortor. Ut et maximus libero. 
                     </p>
                 </div>
             </div>
@@ -105,17 +93,13 @@
                 <div class="noncompliant">
                     <span class="symbol">&#x2612;</span>
                     <h2>Enable citation of the software</h2>
-                    <p>
-                    Here's what to do about it.
-                    </p>
+                    <h3>Why is this important</h3>
                     <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in enim lobortis diam vehicula ultricies. Phasellus ornare purus nec dolor dapibus, ut eleifend erat aliquet. Duis facilisis dolor non erat semper pellentesque. Sed gravida non libero vitae tincidunt. In consequat sed ex at interdum. Proin mattis eu felis sed euismod. Nunc lacinia posuere mattis.
                     </p>
+                    <h3>Help me choose</h3>
                     <p>
                     Aenean quam est, egestas in sagittis in, hendrerit vel justo. Sed metus libero, auctor tincidunt metus eget, suscipit dignissim libero. Aenean non vehicula ante. Duis varius dictum ante vel feugiat. Donec non hendrerit orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus justo a odio vestibulum, sit amet fringilla orci pharetra.
-                    </p>
-                    <p>
-                    Vestibulum posuere a ex vitae egestas. Nulla ac risus vehicula, pulvinar eros non, viverra nunc. Suspendisse sit amet ex lectus. Praesent vulputate elit vitae tincidunt condimentum. Integer at felis eget massa lacinia maximus vitae eu nulla. In in ex et odio feugiat convallis eu sit amet tortor. Ut et maximus libero. 
                     </p>
                 </div>
             </div>
@@ -131,17 +115,13 @@
                 <div class="noncompliant">
                     <span class="symbol">&#x2612;</span>
                     <h2>Use a software quality checklist</h2>
-                    <p>
-                    Here's what to do about it.
-                    </p>
+                    <h3>Why is this important</h3>
                     <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in enim lobortis diam vehicula ultricies. Phasellus ornare purus nec dolor dapibus, ut eleifend erat aliquet. Duis facilisis dolor non erat semper pellentesque. Sed gravida non libero vitae tincidunt. In consequat sed ex at interdum. Proin mattis eu felis sed euismod. Nunc lacinia posuere mattis.
                     </p>
+                    <h3>Help me choose</h3>
                     <p>
                     Aenean quam est, egestas in sagittis in, hendrerit vel justo. Sed metus libero, auctor tincidunt metus eget, suscipit dignissim libero. Aenean non vehicula ante. Duis varius dictum ante vel feugiat. Donec non hendrerit orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus justo a odio vestibulum, sit amet fringilla orci pharetra.
-                    </p>
-                    <p>
-                    Vestibulum posuere a ex vitae egestas. Nulla ac risus vehicula, pulvinar eros non, viverra nunc. Suspendisse sit amet ex lectus. Praesent vulputate elit vitae tincidunt condimentum. Integer at felis eget massa lacinia maximus vitae eu nulla. In in ex et odio feugiat convallis eu sit amet tortor. Ut et maximus libero. 
                     </p>
                 </div>
             </div>
